erDiagram
    Warehouse ||--o{ InventoryItem : "warehouse"
    Product ||--o{ InventoryItem : "product"
    Customer ||--o{ Address : "customer"
    ServiceZone ||--o{ Address : "serviceZone"
    Carrier ||--o{ Vehicle : "carrier"
    Carrier ||--o{ Driver : "carrier"
    Warehouse ||--o{ Shipment : "warehouse"
    Customer ||--o{ Shipment : "customer"
    Carrier ||--o{ Shipment : "carrier"
    Shipment ||--o{ ShipmentItem : "shipment"
    Product ||--o{ ShipmentItem : "product"
    Vehicle ||--o{ Route : "vehicle"
    Driver ||--o{ Route : "driver"
    Route ||--o{ DeliveryStop : "route"
    Shipment ||--o{ DeliveryStop : "shipment"
    Shipment ||--o{ TrackingEvent : "shipment"
    Shipment ||--o{ Invoice : "shipment"
    Customer ||--o{ Invoice : "customer"
    Warehouse ||--o{ Staff : "warehouse"
